--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
     "hubot-scripts": "^2.17.2",
     "hubot-shipit": "^0.2.1",
     "hubot-slack": "^4.4.0",
-    "isomorphic-fetch": "^2.2.1"
+    "isomorphic-fetch": "^2.2.1",
+    "twitter": "^1.7.1"
   },
   "engines": {
-    "node": "9.2.0"
+    "node": "9"
   }
 }
